devops/k8s/redis/service-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-sso-redis
  namespace: istio-system
  labels:
    app: oauth2-sso-redis
spec:
  type: ClusterIP
  selector:
    app: oauth2-sso-redis
  ports:
    - protocol: TCP
      port: 6379
      name: redis
      targetPort: 6379
